# VINS-Fusion_git

./: README.md
VINS-Fusion/camera_models/include/camodocal/calib/: CameraCalibration.h
VINS-Fusion/camera_models/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
VINS-Fusion/camera_models/include/camodocal/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  Spline.h
VINS-Fusion/camera_models/include/camodocal/gpl/: EigenQuaternionParameterization.h  EigenUtils.h  gpl.h
VINS-Fusion/camera_models/include/camodocal/sparse_graph/: Transform.h
VINS-Fusion/camera_models/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  PinholeCamera.cc
VINS-Fusion/config/euroc/: cam0_pinhole.yaml  cam1_pinhole.yaml  euroc_stereo_imu_config.yaml
VINS-Fusion/global_fusion/: CMakeLists.txt
VINS-Fusion/global_fusion/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
VINS-Fusion/loop_fusion/: CMakeLists.txt
VINS-Fusion/loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
VINS-Fusion/loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
VINS-Fusion/vins_estimator/: CMakeLists.txt
VINS-Fusion/vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
VINS-Fusion/vins_estimator/src/estimator/: StereoCamera.cpp  StereoCamera.h  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  gtsam-definitions.h  imu_frontend.cpp  imu_frontend.h  parameters.cpp  parameters.h  stereo_camera.cpp
VINS-Fusion/vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
VINS-Fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
VINS-Fusion/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
VINS-Fusion/vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  tic_toc.h  utility.cpp  utility.h  visualization.cpp  visualization.h
